# aka

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  store.rs
src/commands/: add.rs  history.rs  init.rs  install.rs  list.rs  remove.rs
tests/: error_tests.rs  history_tests.rs  integration_tests.rs
